# ppamltracer

./: .dir-locals.el  .gitignore  Doxyfile  INSTALL  Makefile.am  Makefile_doxygen.am  README  configure.ac  ppamltracer.pc.in
bindings/haskell/: .gitignore  README  Setup.hs  ppamltracer.cabal
bindings/haskell/examples/: simple.hs
bindings/haskell/src/PPAML/: Tracer.hs
bindings/haskell/src/PPAML/Tracer/: Exception.hs
bindings/java/: .gitignore  README  build.xml
bindings/java/examples/: build.xml
bindings/java/examples/src/com/galois/ppaml/tracer/examples/: Simple.java
bindings/java/src/c/: Makefile.am  com_galois_ppaml_tracer_Phase.c  com_galois_ppaml_tracer_Tracer.c  com_galois_ppaml_tracer_TracerCWrapper.c  configure.ac  pointer.h
bindings/java/src/java/com/galois/ppaml/tracer/: CWrapper.java  ClockAcquisitionException.java  ConfigurationException.java  EnvironmentConfiguredTracer.java  ExplicitlyConfiguredTracer.java  NativeOutOfMemoryError.java  OTFException.java  OTFManagerException.java  OTFManagerInitializationException.java  OTFWriterCloseException.java  OTFWriterEntryException.java  OTFWriterException.java  OTFWriterExitException.java  OTFWriterInitializationException.java  OTFWriterPhaseDefinitionException.java  OTFWriterProcessDefinitionException.java  OTFWriterResolutionException.java  Phase.java  TimingException.java  Tracer.java  TracerCWrapper.java  UndefinedTracerBasePathException.java  UnexpectedReturnValueError.java  package-info.java
bindings/python/: .gitignore  MANIFEST.in  README  ppamltracer.py  setup.py
bindings/python/examples/: simple.py
bindings/racket/: .gitignore  README  main.rkt  manual.scrbl
examples/: simple.c
include/: Makefile.am
include/ppaml/: tracer.h
include/ppaml/tracer/: internal.h
m4/: otf.m4
src/: Makefile.am  index.dox  require.h  timing.c  timing.h  tracer.c
test/: Makefile.am  check_ppamltracer.c  tmpdir.c  tmpdir.h  trace_invalid.c  trace_invalid.h  trace_valid.c  trace_valid.h
