-- ppamltracer.cabal -- Cabal build file for ppamltracer
-- Copyright (C) 2014  Galois, Inc.
--
-- Redistribution and use in source and binary forms, with or without
-- modification, are permitted provided that the following conditions are met:
--   1. Redistributions of source code must retain the above copyright notice,
--      this list of conditions and the following disclaimer.
--   2. Redistributions in binary form must reproduce the above copyright
--      notice, this list of conditions and the following disclaimer in the
--      documentation and/or other materials provided with the distribution.
--   3. Neither Galois's name nor the names of other contributors may be used to
--      endorse or promote products derived from this software without specific
--      prior written permission.
--
-- THIS SOFTWARE IS PROVIDED BY GALOIS AND OTHER CONTRIBUTORS "AS IS" AND ANY
-- EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
-- WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
-- DISCLAIMED.  IN NO EVENT SHALL GALOIS OR OTHER CONTRIBUTORS BE LIABLE FOR ANY
-- DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
-- (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
-- LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
-- ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
-- (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
-- SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

cabal-version:       >=1.10
name:                ppamltracer
version:             0.2.1
synopsis:            A lightweight tracing library
description: ppamltracer is a lightweight tracing library designed for explicit
 instrumention of generated code. If you’re writing a compiler and need hard
 data on your optimizer’s efficacy, ppamltracer is the library for you.  This
 package uses Haskell’s foreign function interface to wrap the C libppamltracer
 API.
 .
 ppamltracer writes trace logs in the
 <http://tu-dresden.de/zih/otf/ Open Trace Format>, a free and open standard
 developed by the Zentrum für Informationsdienste und Hochleistungsrechnen
 (Center for Information Services and High-Performance Computing) at the
 Technical University of Dresden.
 .
 We developed ppamltracer as part of DARPA’s
 <http://darpa.mil/Our_Work/I2O/Programs/Probabilistic_Programming_for_Advanced_Machine_Learning_(PPAML%29.aspx Probabilistic Programming for Advancing Machine Learning>
 (PPAML) project.
copyright:           © 2014 Galois, Inc.
license:             BSD3
author:              Benjamin Barenblat
maintainer:          bbarenblat@galois.com
category:            Language
build-type:          Simple
extra-source-files:  examples/simple.hs
tested-with:         GHC==7.6.3

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , EmptyDataDecls
                     , ExistentialQuantification
                     , TemplateHaskell
  build-depends:       base
                     , deepseq >=1.2.0.0 && <2
                     , hierarchical-exceptions <2
  extra-libraries:     ppamltracer
  exposed-modules:     PPAML.Tracer
  other-modules:       PPAML.Tracer.Exception
  ghc-options:         -Wall -O2
